<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Fenrir VK</string>
    <string-array name="array_language_names">
        <item>Default</item>
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string-array name="array_language_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_rendering_mode_names">
        <item>Software</item>
        <item>Hardware enabled</item>
        <item>Force Hardware</item>
    </string-array>
    <string-array name="array_rendering_mode_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_end_list_anim_names">
        <item>Success</item>
        <item>Balls</item>
        <item>Wave</item>
    </string-array>
    <string-array name="array_end_list_anim_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_chat_background_names">
        <item>Monotone</item>
        <item>Cookies</item>
        <item>Lines</item>
        <item>Runes</item>
        <item>Custom…</item>
    </string-array>
    <string-array name="array_chat_background_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="array_lifecycle_names">
        <item>1 min.</item>
        <item>2 min.</item>
        <item>5 min.</item>
        <item>10 min.</item>
        <item>15 min.</item>
    </string-array>
    <string-array name="array_lifecycle_items" translatable="false">
        <item>60000</item>
        <item>120000</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
    </string-array>
    <string-array name="array_ffmpeg_names">
        <item>Off</item>
        <item>Enabled</item>
        <item>Primary</item>
    </string-array>
    <string-array name="array_ffmpeg_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="preview_preview_size" translatable="false">
        <item>S: 75 px</item>
        <item>M: 130 px</item>
        <item>X: 604 px</item>
        <item>Y: 807 px</item>
        <item>Z: 1280 px</item>
        <item>W: 2560 px</item>
    </string-array>
    <string-array name="preview_preview_size_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="array_photo_rounded_names">
        <item>Always rounded</item>
        <item>Rounded if one photo</item>
        <item>Not rounded</item>
    </string-array>
    <string-array name="array_photo_rounded_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_font_size_names">
        <item>Default</item>
        <item>Small</item>
        <item>Average</item>
        <item>Large</item>
        <item>Huge</item>
    </string-array>
    <string-array name="array_font_size_items" translatable="false">
        <item>0</item>
        <item>-1</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="array_news_start_updates_names">
        <item>Disable</item>
        <item>Update</item>
        <item>Ask</item>
    </string-array>
    <string-array name="array_news_start_updates_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_swipes_chats_names">
        <item>Disable</item>
        <item>Slidr</item>
    </string-array>
    <string-array name="array_swipes_chats_items" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="array_donate_anim_names">
        <item>Disable</item>
        <item>Lines</item>
        <item>Fire Ring</item>
    </string-array>
    <string-array name="array_donate_anim_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_is_open_url_internal_names">
        <item>Disable</item>
        <item>Only VK</item>
        <item>All Url</item>
    </string-array>
    <string-array name="array_is_open_url_internal_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_pager_transform_names" translatable="false">
        <item>Off</item>
        <item>Depth Transformer</item>
        <item>Zoom Out Transformer</item>
        <item>Clock Spin Transformer</item>
        <item>Background To Foreground Transformer</item>
        <item>Cube In Depth Transformer</item>
        <item>Fan Transformer</item>
        <item>Gate Transformer</item>
        <item>Slider Transformer</item>
    </string-array>
    <string-array name="array_pager_transform_anim_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="array_accounts_input">
        <item>VK Android</item>
        <item>Kate</item>
        <item>Hidden VK Android</item>
        <item>Hidden kate</item>
    </string-array>
    <string-array name="array_sex">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="player_progress_state" translatable="false">
        <item> ••••••</item>
        <item>• •••••</item>
        <item>•• ••••</item>
        <item>••• •••</item>
        <item>•••• ••</item>
        <item>••••• •</item>
        <item>•••••• </item>
    </string-array>
    <string name="crash_error_activity_error_occurred_explanation">Unhandled exception.</string>
    <string name="crash_error_activity_restart_app">Restart</string>
    <string name="crash_error_activity_error_details">Details</string>
    <string name="crash_error_activity_error_details_title">Exception details</string>
    <string name="crash_error_activity_error_details_close">Close</string>
    <string name="crash_error_activity_error_details_copy">Copy</string>
    <string name="crash_error_activity_error_details_copied">Copied</string>
    <string name="crash_error_activity_error_details_clipboard_label">Error information</string>
    <string name="crash_error_activity_out_of_memory">Out of memory!</string>
    <string name="dialogs">Dialogs</string>
    <string name="dialog_day_today">Today</string>
    <string name="dialog_day_yesterday">Yesterday</string>
    <string name="dialog_day_ten_days">For 10 days</string>
    <string name="dialog_pinned">Pinned</string>
    <string name="dialog_day_older">Old</string>
    <string name="dialog_me">I</string>
    <string name="attachments">[attachments]</string>
    <string name="sticker_message">[sticker]</string>
    <string name="voice_message">[audio message]</string>
    <string name="audio_message">[audio]</string>
    <string name="call_message">[call]</string>
    <string name="doc_message">[document]</string>
    <string name="gift_message">[gift]</string>
    <string name="graffity_message">[graffiti]</string>
    <string name="photo_message">[photo]</string>
    <string name="video_message">[video]</string>
    <string name="wall_message">[repost]</string>
    <string name="forward_messages">[forwarded]</string>
    <string name="forward_messages_view">FORWARDED</string>
    <string name="general_settings">Commons</string>
    <string name="delete">Delete</string>
    <string name="enable_dialogs_sound_title">Sound</string>
    <string name="enable_dialogs_vibro_title">Vibration</string>
    <string name="enable_dialogs_led_title">LED</string>
    <string name="enable_groupchat_notif_title">Enable notifications</string>
    <string name="refresh">Refresh</string>
    <string name="high_notif_priority_title">High priority notifications</string>
    <string name="pin">Pin</string>
    <string name="edit">Edit</string>
    <string name="shorted_links_empty_text">Here you will see shortened links</string>
    <string name="copy_url">Copy link</string>
    <string name="copy_id">Copy ID</string>
    <string name="search">Search</string>
    <string name="set_default">Reset</string>
    <string name="copy_data">Copy</string>
    <string name="forward">Forward</string>
    <string name="button_1" translatable="false">1</string>
    <string name="ask_for_pin_on_application_start_title">PIN-code at start</string>
    <string name="ask_for_pin_on_application_start_summary">Request a PIN-code when starting the application</string>
    <string name="delayed_pin_for_entrance_title">Don\'t ask every time</string>
    <string name="delayed_pin_for_entrance_summary">Request PIN-code only after 10 minutes</string>
    <string name="use_pin_for_security_title">Use PIN</string>
    <string name="change_pin_title">Change PIN</string>
    <string name="clear_storage_of_encryption_keys">Clear encryption key store</string>
    <string name="delete_keys">Delete keys</string>
    <string name="encryption_terms_of_use_title">Terms of Use</string>
    <string name="secured_messages">Protected messages</string>
    <string name="link">Link</string>
    <string name="add_to_launcher_shortcuts">Add to app shortcuts</string>
    <string name="other">Other</string>
    <string name="hide_notif_message_body_summary">Don\'t show message text in notification</string>
    <string name="hide_notif_message_body_title">Hide message body</string>
    <string name="community_options_main_info_title">Main information</string>
    <string name="community_options_name_title">Title</string>
    <string name="community_options_description_title">Community description</string>
    <string name="community_options_link_title">Address page</string>
    <string name="community_options_type_title">Type group</string>
    <string name="community_options_comments_title">Comments</string>
    <string name="community_options_feedback_title">Feedback</string>
    <string name="community_options_enable_comments">Comments on</string>
    <string name="community_options_comments_filter_title">Comment filter</string>
    <string name="community_options_enable_profanity_filter">Turn on obscene language filter</string>
    <string name="community_options_enable_keyword_filter">Enable keyword filter</string>
    <string name="community_options_separate_keywords_by_commas">List keywords separated by commas.</string>
    <string name="reason_spam">Spam</string>
    <string name="save">Save</string>
    <string name="allow_fingerprint_title">Allow fingerprint</string>
    <string name="close">Closed</string>
    <string name="open_clipboard_url">Open link in clipboard</string>
    <string name="wall_attachments">Wall attachments</string>
    <string name="search_stories">Search stories</string>
    <string name="crypt_version">Encryption version"</string>
    <string name="disable_encryption">Disable encryption"</string>
    <string name="do_short_link">Shorten</string>
    <string name="validate">Verify</string>
    <string name="important">Important messages</string>
    <string name="show_hidden_accounts">Show hidden accounts</string>
    <string name="go_discography">Go Discography</string>
    <string name="reverse_time">From old to new</string>
    <string name="local_server_sync">Synchronize the remote list</string>
</resources>