<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorSurface"
    android:gravity="center_vertical"
    android:minHeight="48dp">

    <ImageView
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close"
        android:padding="8dp"
        android:src="@drawable/close"
        app:tint="?colorOnSurface" />

    <TextView
        android:id="@+id/actionModeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="72dp"
        android:layout_toStartOf="@+id/options"
        android:text="@string/button_1"
        android:textSize="@dimen/font_size_title" />

    <LinearLayout
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:animateLayoutChanges="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/buttonForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/forward"
            android:padding="8dp"
            android:src="@drawable/ic_outline_forward"
            app:tint="?colorOnSurface" />

        <ImageView
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/edit"
            android:padding="8dp"
            android:src="@drawable/pencil"
            app:tint="?colorOnSurface" />

        <ImageView
            android:id="@+id/buttonCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/copy_data"
            android:padding="8dp"
            android:src="@drawable/content_copy"
            app:tint="?colorOnSurface" />

        <ImageView
            android:id="@+id/buttonPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/pin"
            android:padding="8dp"
            android:src="@drawable/pin"
            app:tint="?colorOnSurface" />

        <ImageView
            android:id="@+id/buttonStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/important"
            android:padding="8dp"
            android:src="@drawable/star"
            app:tint="?colorOnSurface" />

        <ImageView
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete"
            android:padding="8dp"
            android:src="@drawable/ic_outline_delete"
            app:tint="?colorOnSurface" />

        <ImageView
            android:id="@+id/buttonSpam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/reason_spam"
            android:padding="8dp"
            android:src="@drawable/report"
            app:tint="?colorOnSurface" />

    </LinearLayout>

</RelativeLayout>