<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="8dp"
        android:text="@string/enable_groupchat_notif_title"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/font_size_title" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="8dp"
        android:text="@string/high_notif_priority_title"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/font_size_title" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="8dp"
        android:text="@string/enable_dialogs_sound_title"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/font_size_title" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/vibro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="8dp"
        android:text="@string/enable_dialogs_vibro_title"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/font_size_title" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/led"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="8dp"
        android:text="@string/enable_dialogs_led_title"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/font_size_title" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:weightSum="10">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:backgroundTint="#4CAF50"
            android:text="@string/set_default" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/save" />
    </TableRow>


</LinearLayout>