<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/reverse_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="8dp"
        android:text="@string/reverse_time"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/font_size_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/local_server_sync"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/local_server_sync"
        android:textSize="12sp"
        app:icon="@drawable/refresh" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/go_discography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/go_discography"
        app:icon="@drawable/share" />
</LinearLayout>